
- Martin 2007-12-21
 -- Feature: HMS-CO supported (Peter A.)
 -- Feature: Webcams or local pictures added
 -- Feature: ks300 mit Drewpoint (Boris)

- Martin 2007-12-24
 -- Bugfix: Userdef-Gnuplot with type temperature now with y1tics
 -- Feature: Webcam/Pics hideable

- Martin 2008-03-24
 -- Bugfix: FHT-View with the current CVS-FHEM was broken

- Martin 2008-03-25
 -- Bugfix: KS300-Log now possible with Full Log like define kslog FileLog /var/tmp/ks300.log ks300:.*

- Martin 2008-14-13
 -- Bugfix: FHT: lime-protection not more in the field of actuator

- Martin 2009-03-26
  -- Bugfix: table-format for userdefs changed
  -- Feature: taillogorder optional with date (config.php)
  -- Feature: HMS100CO added

- Martin 2009-11-10
  -- Bugfix: Pulldown-Menu without selected FTDEV not possible any more

- Martin 2009-11-16
  -- Feature: Google-Weather-Api added. 
  -- Feature: Dislay of all Logs including the FS20-devices (grep on fhem.log)
  -- Feature: The status of the batteries of FHT and HMS are shown in the graphics
  -- php4 disabled. Only php5 is supported.
  -- A lot of examples of the UserDefs are added.

- Martin 2009-12-19
  -- Feature: CUL_WS added. Automatic support for S300TH (eg. S555TH)

- Martin 2010-01-08
  -- Feature: Interface to fhem changes to stream_socket_client
  -- Bugfix: table-format on Android-Browser
  -- Feature:  Optimized for smartphones
  -- Feature: Rooms possible for Webcam and Google-Weather 
  -- Misc: Output of html better formated
  -- Feature. Skinable -- change the colors

- Martin 2010-03-12
  -- Bugfix: better check of availability of google-weather
  -- Feature: DBLog added for everything except UserDefs
-Martin 201004-26

- Martin 2012-04-24
  -- Bugfix: no need for checking FHEM-Version any more
  -- Bugfxi: the FS20-Type from Userdef the first time with a broken graphic

- Martin 2012-04-25
  -- Feature: debugging for xmllist included

- Martin 2012-05-03
  -- Bugfix: getting xmllist from FHEM without \r\n