@@ -216,5 +216,8 @@ It is not necessary to tell fhem that there are other logs.
 2012-05-02
 	-- Bugfix: getting xmllist from FHEM without \r\n, no netcat any more
 	   Changed: index.php, config.php
+
+2012-05-07
+	-- Bugfix: userdefs.php works with new gnuplot-version
 	  
 
